--- a/Public/index.html
+++ b/Public/index.html
@@ -37,33 +37,46 @@
     </section>
     <section id="experience" class="content-container">
         <h2>Experience</h2>
-        <ul>
-            <li class="info">
-                <div>Student at Code The Dream</div>
-                <div class="date">Jan 2024 - Present</div>
-            </li>
-            <li class="info">
-                <div>Hardware Tester at INTC, Ampcus Inc.</div>
-                <div class="date">Mar 2022 - Dec 2022</div>
-            </li>
-            <li class="info">
-                <div>Software QA Tester at Applause Inc.</div>
-                <div class="date">Jan 2019 - Mar 2022</div>
-            </li>
-            <li class="info">
-                <div>Graphic Designer at Children magazine</div>
-                <div class="date">Jan 2010 - Dec 2018</div>
-            </li>
-        </ul>
+        <div class="grid-container">
+            <div class="info grid-item">
+                <h4 class="date">2024-Now&nbsp</h4>
+                <div class="one-exp">
+                    <h4>Student at Code The Dream</h4>
+                    <p>Intensive learning JavaScript, HTML, CSS</p>
+                </div>
+            </div>
+            <div class="info grid-item">
+                <h4 class="date">2022-2023</h4>
+                <div class="one-exp">
+                    <h4>Hardware Tester at INTC, Ampcus Inc.</h4>
+                    <p>Testing  hardware from software side.</p>
+                </div>
+            </div>
+            <div class="info grid-item">
+                <h4 class="date">2019-2022</h4>
+                <div class="one-exp">
+                    <h4>Software QA Tester at Applause Inc.</h4>
+                    <p>Testing web, mobile Android and iOS apps.</p>
+                </div>
+            </div>
+            <div class="info grid-item">
+                <h4 class="date">2010-2018</h4>
+                <div class="one-exp">
+                    <h4>Graphic Designer at Noah's Ark</h4>
+                    <p>Designing and layout for Children magazine.</p>
+                </div>
+            </div>
+        </div>
     </section>
     <section id="skills" class="content-container">
         <h2>skills</h2>
-        <ul>
+        <ul class="skills-list">
             <li class="info">Java Script, HTML, CSS</li>
-            <li class="info">Node.js, Rest API</li>
+            <li class="info">Node.js, Postman, Rest API</li>
             <li class="info">Python, Pytest, Django</li>
             <li class="info">Playwright, Selenium</li>
-            <li class="info">Postman, MySQL, Git</li>
+            <li class="info">MySQL, Git/GitHub</li>
+            <li class="info">Docker, Jenkins</li>
         </ul>
     </section>
     <section id="projects" class="content-container">
