--- a/Public/index.html
+++ b/Public/index.html
@@ -71,14 +71,6 @@
     </section>
     <section id="skills" class="content-container">
         <h2>skills</h2>
-        <ul class="skills-list">
-            <li class="info">Java Script, HTML, CSS</li>
-            <li class="info">Node.js, Postman, Rest API</li>
-            <li class="info">Python, Pytest, Django</li>
-            <li class="info">Playwright, Selenium</li>
-            <li class="info">MySQL, Git/GitHub</li>
-            <li class="info">Docker, Jenkins</li>
-        </ul>
     </section>
     <section id="projects" class="content-container">
         <h2>projects</h2>
@@ -94,5 +86,6 @@
                     <i class="fa fa-github"></i>My projects on GutHub</a></li>
         </ul>
     </section>
+    <script src="js/index.js"></script>
 </body>
 </html>
