--- a/Public/index.html
+++ b/Public/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Contact information">
     <title>Vera Fesianava Haumea</title>
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -70,14 +71,6 @@
     </section>
     <section id="skills" class="content-container">
         <h2>skills</h2>
-        <ul class="skills-list">
-            <li class="info">Java Script, HTML, CSS</li>
-            <li class="info">Node.js, Postman, Rest API</li>
-            <li class="info">Python, Pytest, Django</li>
-            <li class="info">Playwright, Selenium</li>
-            <li class="info">MySQL, Git/GitHub</li>
-            <li class="info">Docker, Jenkins</li>
-        </ul>
     </section>
     <section id="projects" class="content-container">
         <h2>projects</h2>
@@ -93,5 +86,6 @@
                     <i class="fa fa-github"></i>My projects on GutHub</a></li>
         </ul>
     </section>
+    <script src="js/index.js"></script>
 </body>
 </html>
