Projects list and Connect handling

--- a/Public/index.html
+++ b/Public/index.html
@@ -6,6 +6,11 @@
     <meta name="description" content="Contact information">
     <title>Vera Fesianava Haumea</title>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="manifest" href="img/site.webmanifest">
+
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -79,11 +84,17 @@
         <h2>Connect</h2>
         <ul>
             <li class="social-link">
-                <a href="https://www.linkedin.com/in/vera-fesianava/" target="_blank" rel="noopener noreferrer">
-                    <i class="fa fa-linkedin"></i>Let's connect on LinkedIn</a></li>
+                <a href="https://www.linkedin.com/in/" target="_blank" rel="noopener noreferrer">
+                    <i class="fa fa-linkedin"></i>Let's connect on LinkedIn</a>
+            </li>
             <li class="social-link">
-                <a href="https://github.com/verafes" target="_blank" rel="noopener noreferrer">
-                    <i class="fa fa-github"></i>My projects on GutHub</a></li>
+                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                    <i class="fa fa-github"></i>My projects on GitHub</a>
+            </li>
+            <li class="social-link">
+                <a target="_blank" aria-hidden="true" rel="noopener noreferrer">
+                    <i class="fa fa-google"></i>Email me</a>
+            </li>
         </ul>
     </section>
     <section id="leave-message" class="content-container">
